chore: Update webhook endpoint list type
